# quart_cms

./: .gitignore  README.md  pyproject.toml
indus/: README.md
indus/docker/: Dockerfile  dev.docker-compose.yml
indus/env/: .env  dev.bashrc
indus/scripts/: docker-build-entrypoint.sh  docker-run-entrypoint.sh
resources/: data.json  data.schema.json
resources/templates/: contact.html.jinja2  elements.html  generic.html  index.html.jinja2  index2.html  index3.html.jinja2  landing.html  natation.html.jinja2  plongeon.html.jinja2  trampoline.html.jinja2
resources/templates/assets/css/: ascs.css  main.css
resources/templates/parts/: banner_section.html.jinja2  common.html.jinja2  contact.html.jinja2  footer.html.jinja2  header.html.jinja2  logo.html.jinja2  menu.html.jinja2  scripts.html.jinja2
src/: app_context.py  easy_popen.py  ep.py  logger.py
src/model/: app_config.py  data_model.py
src/model/google/: models.py
src/routes/: another_route_controller.py  default.py  services.py
