[tool.poetry]
name = "quart_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
quart = "^0.19.5"
hypercorn = "^0.16.0"
jinja-templating = {git = "https://github.com/nh-37rtm/JinjaTemplating"}
pyyaml = "^6.0.1"
asyncinotify = "^4.0.9"
aiohttp = "^3.10.5"
dataclasses-json = "^0.6.7"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
